# slegpm

./: Cargo.toml  README.md  基于谱向量支配的图模式匹配算法技术报告.md  校对方案.md
benches/: spectral_pipeline.rs
src/: cache.rs  datasets.rs  lib.rs  main.rs  sampling.rs  spectral.rs  wl.rs
src/graph/: construction.rs  mod.rs  model.rs  serialization.rs
src/pipeline/: candidate.rs  matching.rs  mod.rs  preprocess.rs  workflow.rs
src/sampling/: mod.rs  pattern_sampler.rs
src/spectral/: features.rs  mod.rs  normalized_laplacian.rs  spectral_vector.rs
src/verify/: dominance.rs  interlacing.rs  mod.rs
tests/: datasets_workflow.rs  matching_pipeline.rs  workflow_smoke.rs
