[package]
name = "slegpm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
env_logger = "0.11"
indexmap = { version = "2.2", features = ["rayon", "serde"] }
log = "0.4"
nalgebra = { version = "0.32", features = ["std"] }
ndarray = { version = "0.15", features = ["std"] }
petgraph = { version = "0.6", features = ["stable_graph"] }
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
