[package]
name = "slegpm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
env_logger = "0.11"
indexmap = { version = "2.2", features = ["serde"] }
log = "0.4"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
petgraph = { version = "0.6", features = ["stable_graph"] }
once_cell = "1.19"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vf2 = "1.0"

[dev-dependencies]
approx = "0.5"
tempfile = "3.9"
